<resources>
    <string name="app_name">Lesson1</string>
    <string name="calculator">Calculator</string>
    <string name="cat">Cat</string>
    <string name="shark">Shark</string>
    <string name="mouse">Mouse</string>
    <string name="goat">Goat</string>
    <string name="horse">Horse</string>
    <string name="images">Images</string>
    <string name="_3">3</string>
    <string name="clear">Clear</string>
    <string name="_4">4</string>
    <string name="Calc">*</string>
    <string name="Minus">-</string>
    <string name="count">Count</string>
    <string name="_1">1</string>
    <string name="c">C</string>
    <string name="_2">2</string>
    <string name="error_message">Ошибка</string>
    <string name="_5">5</string>
    <string name="_6">6</string>
    <string name="_7">7</string>
    <string name="div">/</string>
    <string name="_0">0</string>
    <string name="_8">8</string>
    <string name="power">^</string>
    <string name="plus">+</string>
    <string name="_9">9</string>
    <string name="off">OFF</string>
    <string name="on">On</string>
    <string name="prev">Prev</string>
    <string name="next">Next</string>
    <string name="title_1">Title 1</string>
    <string name="title_2">Title 2</string>
    <string name="hello_username"><![CDATA[Hello, <UserName>]]></string>
    <string name="title_3">   Title 3</string>
    <string name="title4">Title 4</string>
    <string name="title6">Title 6</string>
    <string name="titles">Titles</string>
    <string name="change_image_color">Change image color</string>
    <string name="cats_breed">Cats Breed</string>
    <string name="column2">2 Columns</string>
    <string name="column1">1 Column</string>
<<<<<<< HEAD
    <string name="title5">Title5</string>
    <string name="_1000">$1000</string>
    <string name="title7">Title 7</string>
    <string name="matches">matches</string>
=======
    <string name="title5">Title 5</string>
    <string name="_1000">$1000</string>
    <string name="title7">Title 7</string>
>>>>>>> d9002ebbcf5d3537f5a2c2c3cb792ed1f41ab8de


    <string-array name="transformation">
        <item>No transformation</item>
        <item>Blur transformation</item>
        <item>Grayscale Transformation</item>
        <item>Rounded Corners Transformation</item>
        <item>Circle Transformation</item>
    </string-array>


</resources>