<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main_activity"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <Switch
        android:id="@+id/switchChangeColor"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="0"
        android:textOff="@string/off"
        android:textOn="@string/on"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="UseSwitchCompatOrMaterialXml" />

    <com.google.android.material.imageview.ShapeableImageView
        android:id="@+id/shapeableImageView"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="16dp"
        android:layout_marginTop="10dp"
        android:scaleType="centerCrop"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:shapeAppearanceOverlay="@style/ShapeAppearanceOverlay.App.CornerSize50Percent"
        app:srcCompat="@drawable/goat" />

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginTop="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/calculator"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="100dp"
                android:insetLeft="20dp"
                android:insetTop="50dp"
                android:insetRight="20dp"
                android:text="@string/calculator"
                app:backgroundTint="@color/button_color"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <Button
                android:id="@+id/images"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetLeft="20dp"
                android:insetTop="50dp"
                android:insetRight="20dp"
                android:text="@string/images"
                app:backgroundTint="@color/button_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/calculator" />

            <Button
                android:id="@+id/titleActivity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetLeft="20dp"
                android:insetTop="50dp"
                android:insetRight="20dp"
                android:text="@string/titles"
                app:backgroundTint="@color/button_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/images" />

            <Button
                android:id="@+id/changeImageColorButton"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetLeft="20dp"
                android:insetTop="50dp"
                android:insetRight="20dp"
                android:text="@string/change_image_color"
                app:backgroundTint="@color/button_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/titleActivity" />

            <Button
                android:id="@+id/cats_breed"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetLeft="20dp"
                android:insetTop="50dp"
                android:insetRight="20dp"
                android:text="@string/cats_breed"
                app:backgroundTint="@color/button_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/changeImageColorButton" />
<<<<<<< HEAD

            <Button
                android:id="@+id/matches_activity"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:insetLeft="20dp"
                android:insetTop="50dp"
                android:insetRight="20dp"
                android:text="@string/matches"
                app:backgroundTint="@color/button_color"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/cats_breed" />
=======
>>>>>>> d9002ebbcf5d3537f5a2c2c3cb792ed1f41ab8de


        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>